tests/type_errors/list_concat_different_types.nos
# expect_error: type mismatch
# List ++ must have matching element types
main() = [1, 2, 3] ++ ["a", "b", "c"]
